Fixing issue with the menu dispalying on mobile

--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -108,6 +108,7 @@
     &__navigation {
         float: right;
         margin-top: 20px;
+        position: relative;
 
         button {
             border: none;
